# bnb-cookiecutter-example

./: .bumpversion.cfg  README.md  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
docs/: Makefile  autodoc.rst  conf.py  index.rst  make.bat  reference.rst
src/bnb_cookiecutter_example/: __init__.py
tests/: __init__.py  test_bnb_cookiecutter_example.py
