[metadata]
name = bnb-cookiecutter-example
version = 0.0.1
description = A project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bnbalsamo/bnb-cookiecutter-example
author = First Last
author_email = you@provider.com
license_file = LICENSE

[options]
packages = find:
;install_requires =
;    requests
python_requires = >=3.6,<4
include_package_data = True
package_dir = =src

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =
;    bnb-cookiecutter-example = bnb_cookiecutter_example.cli:main

[options.extras_require]
dev =
    black
    blacken-docs
    build>=0.2.1
    bump2version
    invoke
    isort[pyproject]>=5.0.2
    pip>=21.1
    pip-tools
    pylint>=2.6.0
    shiv
    sphinx-autobuild
    twine
    wheel
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx_rtd_theme
tests =
    coverage[toml]
    pytest
    pytest-cov
    tox
    tox-pyenv
